--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 		"node": ">=15.0.0"
 	},
 	"private": true,
-	"trustedDependencies": ["sharp"],
+	"trustedDependencies": [
+		"sharp"
+	],
 	"type": "module",
 	"scripts": {
 		"build": "qwik build",
@@ -28,25 +30,25 @@
 		"@builder.io/qwik": "^1.5.1",
 		"@builder.io/qwik-city": "^1.5.1",
 		"@fontsource/cabin": "^5.0.17",
-		"@types/eslint": "^8.56.5",
+		"@types/eslint": "^8.56.6",
 		"@types/express": "^4.17.21",
-		"@types/node": "^20.11.28",
-		"@typescript-eslint/eslint-plugin": "^7.2.0",
-		"@typescript-eslint/parser": "^7.2.0",
-		"autoprefixer": "^10.4.18",
+		"@types/node": "^20.11.30",
+		"@typescript-eslint/eslint-plugin": "^7.3.1",
+		"@typescript-eslint/parser": "^7.3.1",
+		"autoprefixer": "^10.4.19",
 		"eslint": "^8.57.0",
 		"eslint-plugin-qwik": "^1.5.1",
-		"postcss": "^8.4.35",
+		"postcss": "^8.4.38",
 		"prettier": "^3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.12",
 		"tailwindcss": "3.4.1",
-		"typescript": "^5.4.2",
-		"vite": "^5.1.6",
+		"typescript": "^5.4.3",
+		"vite": "^5.2.6",
 		"vite-tsconfig-paths": "^4.3.2"
 	},
 	"dependencies": {
 		"express": "4.18.3",
 		"ftp-ts": "^1.1.0",
-		"undici": "^6.9.0"
+		"undici": "^6.10.1"
 	}
 }
